# django-ecommerce

./: .env.example  .gitignore  Makefile  README.md  build.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
src/: Dockerfile  requirements.txt
src/apps/cart/: cart.py  forms.py  urls.py  views.py
src/apps/coupons/: models.py  urls.py  views.py
src/apps/coupons/migrations/: 0001_initial.py
src/apps/ecommerce/: admin.py  recommender.py  urls.py  views.py
src/apps/ecommerce/migrations/: 0001_initial.py  0002_translations.py  0003_remove_producttranslation_name_and_more.py
src/apps/ecommerce/models/: Category.py  Product.py
src/apps/orders/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
src/apps/orders/migrations/: 0001_initial.py  0002_order_braintree_id.py  0003_order_coupon_order_discount.py  0004_alter_order_address_alter_order_city_and_more.py
src/apps/orders/utils/: admin_order.py  admin_order_detail.py  csv.py
src/apps/payment/: task.py  urls.py  views.py
src/locale/en/LC_MESSAGES/: django.po
src/locale/pt_BR/LC_MESSAGES/: django.po
src/setup/: celery.py  settings.py  urls.py  wsgi.py
src/setup/settings/: base.py  prod.py
src/static/css/: reset.css  style.css
src/templates/: base.html
src/templates/_partials/: _language-choice.html  _mini-cart.html  _nav.html  _recommended_products.html  _sidebar.html
src/templates/cart/: cart_detail.html
src/templates/ecommerce/: product_detail.html  product_list.html
src/templates/orders/: create.html
src/templates/payment/: process.html
(+8 files in other folders)
